<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:id="@+id/songPreviewLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:fillViewport="true"
    android:orientation="vertical"
    android:descendantFocusability="afterDescendants">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/colorPrimary"
            android:padding="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:id="@+id/toolbarVerticalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:fillViewport="true"
                android:orientation="vertical"
                android:padding="0dp">

                <LinearLayout
                    android:id="@+id/toolbarHorizontalLayout"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:fillViewport="true"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <ImageButton
                        android:id="@+id/navMenuButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:scaleType="centerInside"
                        android:src="@drawable/menu" />

                    <ImageButton
                        android:id="@+id/songInfoButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:scaleType="centerInside"
                        android:src="@drawable/info" />

                    <ImageButton
                        android:id="@+id/chordsHelpButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:scaleType="centerInside"
                        android:src="@drawable/grid" />

                    <ImageButton
                        android:id="@+id/setFavouriteButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:scaleType="centerInside"
                        android:src="@drawable/star_border" />

                    <ImageButton
                        android:id="@+id/transposeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:scaleType="centerInside"
                        android:src="@drawable/transpose" />

                    <ImageButton
                        android:id="@+id/autoscrollButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:scaleType="centerInside"
                        android:src="@drawable/scroll1" />

                    <ImageButton
                        android:id="@+id/songCastButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:scaleType="centerInside"
                        android:src="@drawable/cast" />

                    <ImageButton
                        android:id="@+id/moreActionsButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:scaleType="centerInside"
                        android:src="@drawable/more" />

                </LinearLayout>

                <TextView
                    android:id="@+id/songTitleLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingTop="0dp"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/songPreviewContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <!-- Song Preview -->
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/overlayScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical" />

        <FrameLayout
            android:id="@+id/quickMenuContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <!-- Quick Menus -->
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/exitFullscreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="46dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/fullscreen_exit"
            android:visibility="gone"
            app:backgroundTint="@color/colorFloatingButton"
            app:elevation="6dp"
            app:fabSize="mini"
            app:rippleColor="@color/colorFloatingButtonClicked" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
