...
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:text="@string/transpose_zero"
                    />
                <Button
                    android:id="@+id/transposeP1Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:text="@string/transpose_plus_1"
                    />
...
