...
    <string name="nav_favourites_song">Liked Songs</string>
    <string name="nav_update_songs">Update</string>
    <string name="nav_custom_song">Custom Songs</string>
    <string name="nav_random_song">Random Song</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_about">About</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_screen_share">Bluetooth Sharing</string>
    <string name="nav_purchase">Shop</string>
    <string name="nav_logs" translatable="false">Logs</string>
    <string name="ui_about_content" formatted="false"><![CDATA[
        Application version: <b>%s</b><br>(%s)
...
        <br><a href=\"https://igrek51.github.io/android-songbook/CHANGELOG/\">Changelog - What\'s new in Songbook</a>
        <br>
        <br><a href=\"https://igrek51.github.io/android-songbook/develop/tech-stack\">Third Party Libraries</a>
    ]]></string>
    <string name="action_info_ok">OK</string>
    <string name="action_info_yes">Yes</string>
    <string name="action_secret">\?\?\?</string>
    <string name="action_check_secret">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="ui_db_is_uptodate">Songs database is up-to-date.</string>
    <string name="contact_label">Hi, please contact me (application author) if you have noticed some bugs or you have any ideas how to improve this application. I would be very grateful for your comments and contributing. If you wish to get a reply to your message, please include your email as well.</string>
    <string name="contact_message_hint">Your message…</string>
    <string name="contact_send">Send</string>
    <string name="contact_author_hint">Your name or email (optional)</string>
...
