<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:contentInsetEnd="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <ImageButton
            android:id="@+id/navMenuButton"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="start|center_vertical"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/screenTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="@color/toolbarTitle"
            />
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>